Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-36050

DATA/INDEX DIRECTORY handling is inconsistent

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.5(EOL), 10.6(EOL), 10.11, 11.4, 11.7(EOL), 11.8
    • 11.8.2
    • Plugins
    • None

    Description

      DATA/INDEX DIRECTORY handling is inconsistent between different engines.

      E.g. CSV ignores them. Archive throws a warning that INDEX DIRECTORY is not supported. InnoDB throws an error that INDEX DIRECTORY is not supported.

      We want all engines to behave consistently. Either they should ignore unsupported DIRECTORY options, or ignore with a warning, or fail with an error

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              serg Sergei Golubchik
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.