storage/innobase/handler/ha_innodb.cc
@@ -11329,15 +11329,6 @@ create_table_info_t::create_options_are_invalid()
 		ret = "DATA DIRECTORY";
 	}
 
-	/* Do not allow INDEX_DIRECTORY */
-	if (m_create_info->index_file_name) {
-		push_warning_printf(
-			m_thd, Sql_condition::WARN_LEVEL_WARN,
-			ER_ILLEGAL_HA_CREATE_OPTION,
-			"InnoDB: INDEX DIRECTORY is not supported");
-		ret = "INDEX DIRECTORY";
-	}
-
 	/* Don't support compressed table when page size > 16k. */
 	if ((has_key_block_size || row_format == ROW_TYPE_COMPRESSED)
 	    && srv_page_size > UNIV_PAGE_SIZE_DEF) {
@@ -11618,9 +11609,8 @@ create_table_info_t::parse_table_name(
 		}
 	}
 
-	if (m_create_info->index_file_name) {
-		my_error(WARN_OPTION_IGNORED, ME_WARNING,
-			"INDEX DIRECTORY");
+	if (m_create_info->index_file_name && m_form->s->keys) {
+		my_error(WARN_OPTION_IGNORED, ME_NOTE, "INDEX DIRECTORY");
 	}
 
 	DBUG_RETURN(0);
